German/Lenguajes y compiladores/Lab3/tests/bad/bad06.imp
data Bool = True | False
data N = O | S <N>

method suma (n : N, b : Bool) returns (r : N)
{
    -- wrong constructor arguments types
    r := S [b]
} 

